# glum

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  base.py  build_and_launch  conda-requirements.txt  conda-test-requirements.txt  diag_fisher_benchmarks.py  docker-compose.yml  environment-benchmark.yml  environment-macos.yml  environment-tutorial.yml  environment-win.yml  environment.yml  launch_jupyter  lint  pip-requirements.txt  pixi.toml  pyproject.toml  pytest.ini  reproducer.py  run  setup.py  temp_commits.txt  ui.py  visualization.ipynb
.ci_support/: linux_64_numpy1.20python3.8.____cpython.yaml  linux_64_numpy1.20python3.9.____cpython.yaml  linux_64_numpy1.21python3.10.____cpython.yaml  linux_64_numpy1.23python3.11.____cpython.yaml  linux_64_numpy2.0python3.10.____cpython.yaml  linux_64_numpy2.0python3.11.____cpython.yaml  linux_64_numpy2.0python3.12.____cpython.yaml  linux_64_numpy2.0python3.9.____cpython.yaml  linux_64_numpy2python3.13.____cp313.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.10_default.____cpython.yaml  linux_64_python3.10_skylake.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.13.____cpython.yaml  linux_64_python3.6_default.____cpython.yaml  linux_64_python3.6_skylake.____cpython.yaml  linux_64_python3.7_default.____cpython.yaml  linux_64_python3.7_skylake.____cpython.yaml  linux_64_python3.8_default.____cpython.yaml  linux_64_python3.8_skylake.____cpython.yaml  linux_64_python3.9.____cpython.yaml  linux_64_python3.9_default.____cpython.yaml  linux_64_python3.9_skylake.____cpython.yaml  linux_aarch64_numpy1.20python3.8.____cpython.yaml  linux_aarch64_numpy1.20python3.9.____cpython.yaml  linux_aarch64_numpy1.21python3.10.____cpython.yaml  linux_aarch64_numpy1.23python3.11.____cpython.yaml  linux_aarch64_numpy2.0python3.10.____cpython.yaml  linux_aarch64_numpy2.0python3.11.____cpython.yaml  linux_aarch64_numpy2.0python3.12.____cpython.yaml  linux_aarch64_numpy2.0python3.9.____cpython.yaml  linux_aarch64_numpy2python3.13.____cp313.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.11.____cpython.yaml  linux_aarch64_python3.12.____cpython.yaml  linux_aarch64_python3.13.____cpython.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_numpy2.0python3.10.____cpython.yaml  linux_ppc64le_numpy2.0python3.11.____cpython.yaml  (+58 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: .condarc  backwards-compatibility.yml  build_wheels.yml  ci.yml  conda-build-linux-main.yml  conda-build-linux-master.yml  conda-build-macos.yml  conda-build-win.yml  conda-build.sh  conda-build.yml  daily.yml  debug.yml  docs.sh  issue_628.py  issue_628.sh  tag.sh  (+17 more)
GLMUtility/: LICENSE  README.md  Testing.ipynb  setup.py
benchmarks/: main.py  sklearn_fork.py  tensorflow_file.py  test_glmnet_numerical.py  try_pyglmnet.py
build_tools/: prepare_macos_wheel.sh
conda.recipe/: bld.bat  build.sh  meta.yaml  recipe.yaml
data/: glmnet_results_from_R.csv  housing.parquet
docs/: .gitignore  background.ipynb  benchmark_data.csv  benchmark_figure.ipynb  benchmark_figure.py  benchmarks.rst  benchmarks_figure.py  conf.py  contributing.rst  dev  development.rst  glm.rst  glms.ipynb  index.rst  install.rst  lasso.ipynb  motivation.rst  spatial-smoothing.ipynb  stepwise.rst  tutorials.rst
glum_benchmarks/: README.md  __init__.py  compare_results.py  config.py  config.yaml  config_ci.yaml  problems.py  run_benchmarks.py  util.py
golden_master/: benchmark_gm.json  gm_default.pkl  gm_default_weights.pkl  gm_elastic-net.pkl  gm_elastic-net_weights.pkl  gm_fit_intercept.pkl  gm_fit_intercept_weights.pkl  gm_half-regularization.pkl  gm_half-regularization_weights.pkl  gm_lasso.pkl  gm_lasso_weights.pkl  gm_no-regularization.pkl  gm_no-regularization_weights.pkl  gm_variable_p1.pkl  gm_variable_p1_p2.pkl  gm_variable_p1_p2_weights.pkl  gm_variable_p1_weights.pkl  gm_variable_p2.pkl  gm_variable_p2_weights.pkl  simulation_gm.json  skipped_benchmark_gm.json
performance/: test_performance.py
requirements/: anaconda-requirements.txt  conda-forge-requirements.txt  conda-requirements.txt
scripts/: benchmark.sh  run_intermediate_benchmarks.sh  run_narrow_benchmarks.sh  run_real_benchmarks.sh  run_wide_benchmarks.sh
src/: get_glmnet_test_results.R
tests/: test_core.py  test_glm_benchmarks.py  tests.py
(+449 files in other folders)
