[build-system]
requires = [
  'setuptools',
  'setuptools-scm',
  'wheel',
  'Cython',
  'oldest-supported-numpy',
  'scikit-learn',
]

[tool.ruff]
extend-exclude = ["src/glum_benchmarks/orig_sklearn_fork"]
force-exclude = true
ignore = ["E731", "N802", "N803", "N806"]
line-length = 88
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["glum"]

[tool.cibuildwheel]
skip = [
  "*-win32",
  "*-manylinux_i686",
  "pp*", 
  "*-musllinux_*",
  "cp36*",
  "cp37*",
  "cp38*",
]
test-requires = ["pytest", "pytest-xdist"]

[tool.cibuildwheel.macos]
before-build = [
  "bash build_tools/prepare_macos_wheel.sh",
]

[tool.cibuildwheel.macos.environment]
LDFLAGS="-Wl,-rpath,$CONDA/envs/build/lib -L$CONDA/envs/build/lib"
CFLAGS="-I$CONDA/envs/build/include"
CXXFLAGS="-I$CONDA/envs/build/include"
CXX="/usr/bin/clang++"
CC="/usr/bin/clang"


[tool.pytest.ini_options]
# Filters are standard python warning filters as described here:
# https://docs.python.org/3/library/warnings.html#the-warnings-filter
filterwarnings = [
    "ignore:.*distutils.*:DeprecationWarning:.*",
    "ignore:.*distutils.*:UserWarning:.*",
    "ignore:.*The 'u' format is deprecated.*:DeprecationWarning:pywintypes",
]
