[build-system]
requires = [
  'setuptools',
  'setuptools-scm',
  'wheel',
  'Cython',
  'numpy>=1.25',
  'scikit-learn',
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["src/glum_benchmarks/orig_sklearn_fork/"]

[tool.ruff.lint]
ignore = ["E731", "N802", "N803", "N806"]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["glum", "glum_benchmarks"]

[tool.mypy]
python_version = '3.9'
exclude = [
  "tests/",
  "src/glum_benchmarks/orig_sklearn_fork/",
]
no_implicit_optional = false
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]  
# https://github.com/scikit-learn/scikit-learn/issues/16705  
module = ["sklearn.*"]  
ignore_missing_imports = true  

[tool.cibuildwheel]
skip = [
  "*-win32",
  "*-manylinux_i686",
  "pp*",
  "*-musllinux_*",
  "cp36*",
  "cp37*",
  "cp38*",
]
test-requires = ["pytest", "pytest-xdist"]

[tool.cibuildwheel.macos]
before-build = [
  "bash build_tools/prepare_macos_wheel.sh",
]

[tool.cibuildwheel.macos.environment]
LDFLAGS="-Wl,-rpath,$CONDA/envs/build/lib -L$CONDA/envs/build/lib"
CFLAGS="-I$CONDA/envs/build/include"
CXXFLAGS="-I$CONDA/envs/build/include"
CXX="/usr/bin/clang++"
CC="/usr/bin/clang"
MACOSX_DEPLOYMENT_TARGET="10.13"


[tool.pytest.ini_options]
# Filters are standard python warning filters as described here:
# https://docs.python.org/3/library/warnings.html#the-warnings-filter
filterwarnings = [
    "ignore:.*distutils.*:DeprecationWarning:.*",
    "ignore:.*distutils.*:UserWarning:.*",
    "ignore:.*The 'u' format is deprecated.*:DeprecationWarning:pywintypes",
]
